fix truncated end test modal

--- a/src/global.scss
+++ b/src/global.scss
@@ -59,7 +59,3 @@
   padding-left: 16px;
   padding-top: 0;
 }
-
-.modal-wrapper {
-  --height: 100%;
-}
